--- a/activity_main.axml
+++ b/activity_main.axml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:orientation="vertical"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	
-	<TextView
-		android:text="Welcome"
-		android:textSize="50sp"
-		android:gravity="center"
-		android:textAppearance="?android:attr/textAppearanceLarge"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:id="@+id/textView1"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation=    "vertical"
+    android:layout_width=    "match_parent"
+    android:layout_height=    "match_parent"    >
+  <LinearLayout
+    android:orientation=    "vertical"
+    android:layout_width=    "match_parent"
+    android:layout_height=    "match_parent"
+    android:layout_weight=    "1"    >
+    <TextView
+        android:text="Welcome"
+        android:textSize="50sp"
+		android:gravity="center_horizontal"
 		android:layout_marginBottom="20dp"
-		android:layout_marginTop="20dp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"    />
 	<Button
 		android:text="Profile"
 		android:layout_width="match_parent"
@@ -26,8 +27,7 @@
 		android:text="BMI calculator"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:id="@+id/button2">
-	</RelativeLayout>
+		android:id="@+id/button2"/>
 	<Button
 		android:text="Nutrition Tracking"
 		android:layout_width="match_parent"
@@ -43,5 +43,6 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:id="@+id/button5" />
+  </LinearLayout>
 
-		/>
+</LinearLayout>
