--- a/nutrition_activity.axml
+++ b/nutrition_activity.axml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 	<TextView
-		android:text="Profile"
-		android:textSize="50sp"
+		android:text="Nutritional Tracking"
+		android:textSize="40sp"
 		android:gravity="center_horizontal"
 		android:layout_marginBottom="20dp"
 		android:layout_width="match_parent"
@@ -14,8 +14,9 @@
 		android:minHeight="25px"
 		android:id="@+id/textView1" />
 	<Button
-		android:text="Go Back"
+		android:text="Button"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:id="@+id/btnBackProfile" />
+		android:id="@+id/btnNutBack" />
+
 </LinearLayout>
