--- a/social_activity.axml
+++ b/social_activity.axml
@@ -4,10 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 	<TextView
-		android:text="Profile"
-		android:textSize="50sp"
+		android:text="Social"
+		android:textSize="50dp"
 		android:gravity="center_horizontal"
-		android:layout_marginBottom="20dp"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:minWidth="25px"
@@ -17,5 +16,6 @@
 		android:text="Go Back"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:id="@+id/btnBackProfile" />
+		android:id="@+id/btnSocialBack" />
+
 </LinearLayout>
